Refatorações e criação dos métodos para criar reviews e recuperar reviews de Masters pelo id da master.